Added furikake.html, modified existing html files, added/modified css.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <ul>
         <li><a href="./recipes/eggsbenedict.html">Eggs Benedict - The Hangover Cure</a></li>
         <li><a href="./recipes/madrascurry.html">Madras Curry (Authentic as "Authentic" can get)</a></li>
+        <li><a href="./recipes/furikake.html">Food Wars (<em>Shokugeki no Soma</em>) Recipe: Transforming Furikake Rice</a></li>
         <li><a href="./recipes/blueberry.html">Creamy 4-Ingredient Blueberry Yogurt Cake</a></li>
     </ul>
 </body>
