--- a/recipes/eggsbenedict.html
+++ b/recipes/eggsbenedict.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,9 @@
 <body>
     <h4><a href="../index.html">Recipes</a></h4>
     <h1><em>The Hangover Cure: Eggs Benedict</em></h1>
-    <img src="https://preview.redd.it/nqe5sis5o6m81.jpg?width=960&crop=smart&auto=webp&s=6dc7ff7d85f0ec31415f496d16c937d135256bec" alt="photo of eggs benedict">
+    <div>
+        <img src="https://preview.redd.it/nqe5sis5o6m81.jpg?width=960&crop=smart&auto=webp&s=6dc7ff7d85f0ec31415f496d16c937d135256bec" alt="photo of eggs benedict">
+    </div>
     <h2>Ingredients</h2>
     <ul>
         <li><strong>1</strong> Toasted Muffin</li>
