--- a/recipes/blueberry.html
+++ b/recipes/blueberry.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,9 @@
 <body>
     <h4><a href="../index.html">Recipes</a></h4>
     <h1>Creamy 4-Ingredient Blueberry Yogurt Cake</h1>
-    <img src="https://preview.redd.it/gvfyb42l4re91.jpg?width=960&crop=smart&auto=webp&s=c3602585c13ef36dddda2957cb6274b819990270">
+    <div>
+        <img src="https://preview.redd.it/gvfyb42l4re91.jpg?width=960&crop=smart&auto=webp&s=c3602585c13ef36dddda2957cb6274b819990270">
+    </div>
     <p><strong><em>"With</em></strong> only 4 ingredients, this recipe is super easy to make at home for this hot summer.</p>
     <p>It's soft and creamy with a slightly sweet taste.</p>
     <p>Perfect with many fresh fruits like strawberry, orange, pineapple, and peach...my family loves it!<strong><em>"</em></strong></p>
