--- a/recipes/madrascurry.html
+++ b/recipes/madrascurry.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,9 @@
 <body>
     <h4><a href="../index.html">Recipes</a></h4>
     <h1>Beef Madras Curry: As Authentic as "Authentic" Can Get</h1>
-    <img src="https://preview.redd.it/9rmv99fcvb991.jpg?width=640&crop=smart&auto=webp&s=0afcefbec927d4c7edb3edab2685df3aa154e431">
+    <div>
+        <img src="https://preview.redd.it/9rmv99fcvb991.jpg?width=640&crop=smart&auto=webp&s=0afcefbec927d4c7edb3edab2685df3aa154e431">
+    </div>
     <p><strong><em>"Who</em></strong> doesn't like super tender beef in rich tomato-based curry sauce?</p>
     <p>It melts in the mouth and is super easy to prepare! I have separated the process of cooking as most online recipes call for,</p>
     <p>this gives more control over meat tenderness and the right consistency of the sauce,</p>
@@ -43,10 +46,10 @@
         <li><strong>400ml</strong> of vegetable stock</li>
         <li><strong>1</strong> beef stock cube</li>
         <li><strong>1</strong> large onion, small dice</li>
-        <li>juice of half a lemon</li>
-        <li>a handful of fresh coriander leaves and seeds</li>
-        <li>papadam to serve</li>
-        <li>enough water to cover the meat during slow-cooking</li>
+        <li>Juice of half a lemon</li>
+        <li>A handful of fresh coriander leaves and seeds</li>
+        <li>Papadam to serve</li>
+        <li>Enough water to cover the meat during slow-cooking</li>
     </ul>
     <h2>Instructions</h2>
     <ol>
