--- a/recipes/furikake.html
+++ b/recipes/furikake.html
@@ -54,5 +54,7 @@
         <li>Scramble eggs. Add eggs and chopped green onions to rice. Add the aspic (meat broth jelly).</li>
         <li><strong>Most Important Step</strong>: Watch the cubes <em>melt</em> and enjoy!</li>
     </ol>
+    <h3>><a href="https://www.youtube.com/watch?v=WYs-fvz635A">Tutorial Video</a><</h3>
+    <h5>Credit: Tiana on <a href="https://www.yumofchina.com/">Yum of China</a></h5>
 </body>
 </html>
