--- a/recipes/furikake.html
+++ b/recipes/furikake.html
@@ -8,7 +8,7 @@
     <title>Transforming Furikake Rice</title>
 </head>
 <body>
-    <h4><a href="/index.html">Recipes</a></h4>
+    <h4><a href="../index.html">Recipes</a></h4>
     <h1>Transforming Furikake Rice from Food Wars (<em>Shokugeki no Soma</em>)!</h1>
     <div>
         <img src="https://i.pinimg.com/originals/89/2c/3e/892c3ed57c09612636ab76a64aaca1d0.gif">
